# rasterizer

./: Cargo.toml
src/: camera.rs  gpu.rs  main.rs  model.rs  raster.wgsl  raster_pass.rs  rasterizer.rs  util.rs  window.rs
src/vecs/: mod.rs  vec2.rs  vec3.rs
