[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27.0"
image = "0.25.2"
na = "0.32.2"
wgpu = "22.1.0"
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
nalgebra = "0.33.0"
gltf = "1.4.1"
obj = "0.10.2"
glam = "0.29.0"
futures-intrusive = "0.3.0"